--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>figures & tables</title>
   </head>
   <body>
-    <h1>figures & tables</h1>
+    <h1>figures & tables (same as in document but clearer)</h1>
     <table class="table table-bordered table-sm table--nyc-desc-stats">
       <caption>table 1: descriptive statistics for New York; n = 76; crimes per 1000 <strong>in January 2020</strong></caption>
       <tr>
